r5apply returns Parameters resource